--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "oukan-wordpress-ionic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.1",
-    "angular-resource": "~1.3.13"
+    "ionic": "driftyco/ionic-bower#1.1",
+    "angular-resource": "1.4.3"
   }
 }
