--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oukan-wordpress-ionic",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "oukan-wordpress-ionic: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
@@ -20,6 +20,8 @@
     "com.ionic.keyboard"
   ],
   "cordovaPlatforms": [
-    "ios"
-  ]
+    "ios",
+    "android"
+  ],
+  "license": "MIT"
 }
